force-app/main/default/objects/fferpcore__UserInformation__c/fferpcore__UserInformation__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__UserInformationHelp</customHelpPage>
    <description>Contains user information records that specify user information to be created or updated and the template to use when the Apply User Information Template scheduled job runs.</description>
    <label>User Information</label>
    <nameField>
        <label>Username</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>