force-app/main/default/objects/fferpcore__UserInformation__c/fields/fferpcore__User__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Salesforce user to be created or updated with this user information record.</description>
    <inlineHelpText>Lookup to the Salesforce User to be created or updated with this user information record.</inlineHelpText>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Information</relationshipLabel>
    <relationshipName>UserInformation</relationshipName>
    <type>Lookup</type>
</CustomField>