force-app/main/default/objects/fferpcore__UserInformation__c/listViews/erpws__InactiveUserInformationRecords.listView-meta.xml
<ListView>
    <fullName>erpws__InactiveUserInformationRecords</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__FirstName__c</columns>
    <columns>fferpcore__LastName__c</columns>
    <columns>fferpcore__User__c</columns>
    <columns>fferpcore__Status__c</columns>
    <columns>fferpcore__Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fferpcore__Status__c</field>
        <operation>notEqual</operation>
        <value>Active</value>
    </filters>
    <label>Inactive User Information Records</label>
</ListView>