force-app/main/default/objects/fferpcore__UserInformation__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__FirstName__c</columns>
    <columns>fferpcore__LastName__c</columns>
    <columns>fferpcore__Email__c</columns>
    <columns>fferpcore__User__c</columns>
    <columns>fferpcore__Status__c</columns>
    <columns>fferpcore__Notified__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>